Fixed warning from Arduino IDE about unknown category

--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Geoff Berl
 maintainer=Geoff Berl <GBerl001@monroecc.edu>
 sentence=Eliminates noisy readings from Sharp analog distance sensors
 paragraph=This library uses a method referred to as burst reading in which it takes multiple readings very quickly and only captures the most accurate reading. It also handles the appropriate timing of readings so it won't wastefully use your CPU.
-category=Range Detection
+category=Sensors
 url=https://github.com/mcc-robotics/sharp-distance
 architectures=*
